<resources>
    <string name="app_name">FrontOffice</string>
    <string name="btnSend">Send</string>
    <string name="customerFrom">Seller</string>
    <string name="customerTo">Buyer</string>
    <string name="Goods">Goods</string>
    <string name="btnConfigure">Settings</string>
    <string name="lblTransactions">TNX</string>
    <string name="lblCustomers">Customers Inventory</string>
    <string name="lblAddCust">Add Customer</string>
    <string name="lblAddGoods">Add Goods</string>
    <string name="lblGoods">Choose Goods</string>
    <string name="lblGoodsInventory">Goods Inventory</string>
    <string name="lblInit">Configuration</string>
    <string name="lblQuantity">Quantity</string>
    <string name="lblUnit">Tons</string>
    <string name="lblAddUnit">Add QUantity</string>
    <string name="clearDB">Clear DB</string>
    <string name="lblTessOcr">Get TessOCR</string>
    <string name="lblGoOcr">Get GooOCR</string>
    <string name="lblSellerPrice">Seller Price</string>
    <string name="lblBuyerPrice">Buyer Price</string>
    <string name="lblEmail">Resend Email</string>
    <string name="lblTnx">Set Transaction</string>
    <string name="lblDescription">Note</string>
    <string name="lblAgreement">Deal Contract</string>
    <string name="lblGoodsPicture">Goods Picture</string>
    <string name="lblNewGoods">New Goods</string>
    <string name="lblUpdateGoods">Update Goods</string>
    <string name="lblUpdateCustomer">Update Customer</string>
    <string name="emailRecipient">test@example.com</string>
    <string name="title_activity_settings">Settings</string>
    <string name="lblRecipientEmail">Add recipient email</string>
    <string name="lblFOID">Front Office ID</string>
    <string name="lblSave">Save</string>
</resources>
