<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sk.hppa.frontoffice.MainActivity">

    <Button
        android:id="@+id/btnInitDb"
        android:layout_width="119dp"
        android:layout_height="83dp"
        android:layout_marginRight="16dp"
        android:text="@string/lblInit"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnAddCustomer" />

    <Button
        android:id="@+id/btnAddGoods"
        android:layout_width="119dp"
        android:layout_height="83dp"
        android:text="@string/lblGoodsInventory"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnBuySell" />

    <Button
        android:id="@+id/btnAddCustomer"
        android:layout_width="119dp"
        android:layout_height="83dp"
        android:text="@string/lblCustomers"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnTransactions"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnTransactions"
        android:layout_width="119dp"
        android:layout_height="83dp"
        android:text="@string/lblTransactions"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnConfigure"
        android:layout_width="119dp"
        android:layout_height="83dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/clearDB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddGoods" />

    <Button
        android:id="@+id/btnBuySell"
        android:layout_width="119dp"
        android:layout_height="83dp"
        android:text="Buy/Sell"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="170dp"
        android:layout_height="142dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="445dp"
        android:src="@mipmap/ic_launcher" />

</android.support.constraint.ConstraintLayout>
