<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sk.hppa.frontoffice.BuySell"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/btnEmail"
        android:layout_width="145dp"
        android:layout_height="58dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/lblEmail"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintLeft_toRightOf="@+id/btnSend"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edtBuyerPrice3"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtQuantity3" />

    <Spinner
        android:id="@+id/spinnerGoods3"
        android:layout_width="124dp"
        android:layout_height="35dp"
        android:spinnerMode="dialog"
        app:layout_constraintLeft_toRightOf="@+id/textView11"
        android:layout_marginLeft="16dp"
        app:layout_constraintRight_toLeftOf="@+id/textView12"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/edtSellerPrice2"
        app:layout_constraintHorizontal_bias="0.428" />

    <EditText
        android:id="@+id/edtQuantity3"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/edtBuyerPrice2" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="44dp"
        android:layout_height="35dp"
        android:text="@string/lblGoods"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/edtSellerPrice2" />

    <EditText
        android:id="@+id/edtSellerPrice3"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtQuantity3"
        app:layout_constraintRight_toLeftOf="@+id/textView14"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:text="@string/lblUnit"
        android:textAlignment="center"
        app:layout_constraintRight_toLeftOf="@+id/edtQuantity3"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/edtBuyerPrice2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="58dp"
        android:layout_height="35dp"
        android:text="@string/lblSellerPrice"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtQuantity3"
        app:layout_constraintRight_toLeftOf="@+id/edtSellerPrice3"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="58dp"
        android:layout_height="35dp"
        android:text="@string/lblBuyerPrice"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtQuantity3"
        app:layout_constraintRight_toLeftOf="@+id/edtBuyerPrice3"
        android:layout_marginRight="16dp" />

    <EditText
        android:id="@+id/edtBuyerPrice2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtQuantity2"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Spinner
        android:id="@+id/spinnerGoods2"
        android:layout_width="124dp"
        android:layout_height="35dp"
        android:spinnerMode="dialog"
        app:layout_constraintLeft_toRightOf="@+id/textView7"
        android:layout_marginLeft="16dp"
        app:layout_constraintRight_toLeftOf="@+id/textView8"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/edtSellerPrice1"
        app:layout_constraintHorizontal_bias="0.428" />

    <EditText
        android:id="@+id/edtQuantity2"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/edtBuyerPrice1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="44dp"
        android:layout_height="35dp"
        android:text="@string/lblGoods"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/edtSellerPrice1" />

    <EditText
        android:id="@+id/edtSellerPrice2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/edtQuantity2"
        app:layout_constraintRight_toLeftOf="@+id/textView10"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:text="@string/lblUnit"
        android:textAlignment="center"
        app:layout_constraintRight_toLeftOf="@+id/edtQuantity2"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/edtBuyerPrice1" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="58dp"
        android:layout_height="35dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblSellerPrice"
        android:textAlignment="center"
        app:layout_constraintRight_toLeftOf="@+id/edtSellerPrice2"
        app:layout_constraintTop_toBottomOf="@+id/edtQuantity2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="58dp"
        android:layout_height="35dp"
        android:text="@string/lblBuyerPrice"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtQuantity2"
        app:layout_constraintRight_toLeftOf="@+id/edtBuyerPrice2"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/tvBuyer"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/customerTo"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSeller" />

    <TextView
        android:id="@+id/tvSeller"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/customerFrom"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBuyerPrice"
        android:layout_width="58dp"
        android:layout_height="35dp"
        android:text="@string/lblBuyerPrice"
        android:textAlignment="center"
        app:layout_constraintRight_toLeftOf="@+id/edtBuyerPrice1"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtQuantity1" />

    <TextView
        android:id="@+id/tvSellerPrice"
        android:layout_width="58dp"
        android:layout_height="35dp"
        android:layout_marginRight="16dp"
        android:text="@string/lblSellerPrice"
        android:textAlignment="center"
        app:layout_constraintRight_toLeftOf="@+id/edtSellerPrice1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtQuantity1" />

    <TextView
        android:id="@+id/tvUnit1"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lblUnit"
        android:textAlignment="center"
        app:layout_constraintRight_toLeftOf="@+id/edtQuantity1"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBuyer" />

    <EditText
        android:id="@+id/edtBuyerPrice1"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtQuantity1" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="145dp"
        android:layout_height="58dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/lblTnx"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/spinnerSeller"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:spinnerMode="dialog"
        app:layout_constraintLeft_toRightOf="@+id/tvSeller"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerBuyer"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:spinnerMode="dialog"
        app:layout_constraintLeft_toRightOf="@+id/tvBuyer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSeller" />

    <Spinner
        android:id="@+id/spinnerGoods1"
        android:layout_width="124dp"
        android:layout_height="35dp"
        android:spinnerMode="dialog"
        app:layout_constraintRight_toLeftOf="@+id/tvUnit1"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toRightOf="@+id/tvGoods1"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBuyer" />

    <EditText
        android:id="@+id/edtQuantity1"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBuyer" />

    <TextView
        android:id="@+id/tvGoods1"
        android:layout_width="44dp"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lblGoods"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBuyer" />

    <EditText
        android:id="@+id/edtSellerPrice1"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true"
        app:layout_constraintRight_toLeftOf="@+id/tvBuyerPrice"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtQuantity1" />

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="216dp"
        android:layout_height="66dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSellerPrice3"
        tools:text="@string/lblDescription" />

</android.support.constraint.ConstraintLayout>
